<resources>
    <string name="app_name">QuickBytes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="favorite">Favorites</string>
    <string name="filters">Filters</string>
    <string name="filterText">Select Filters to apply in the meals.</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="lactose_free">Lactose Free</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
</resources>